<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taxi net</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="you_are">Bạn là</string>
    <string name="taxi_driver">Lái xe taxi</string>
    <string name="taxi_customer">Hành khách</string>
    <string name="password_hint">**********</string>
    <string name="name_of_taxi_driver">Tên tài xế</string>
    <string name="id_of_taxi_driver">Số cmt</string>
    <string name="phone_number_of_taxi_driver">Số điện thoại</string>
    <string name="name_of_company_of_taxi_driver">Tên công ty</string>
    <string name="bank_account_of_taxi_driver">TK ngân hàng</string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="busy">• Đang bận</string>
    <string name="avalible">Đang rảnh</string>
    <string name="distance">Khoảng cách | Giá tiền</string>
    <string name="driver">Tài xế</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="phone_number_value">(04) 3 113</string>
    <string name="remove_favorite">Bỏ ưa thích</string>
    <string name="add_note">Thêm ghi chú</string>
    <string name="starting_point">Điểm đi</string>
    <string name="stopping_point">Điểm đến</string>
    <string name="same_journey">Lái xe có cùng hành trình</string>
    <string name="selected_driver">Lái xe đã chọn</string>
    <string name="remove_driver">Bỏ chọn lái xe</string>
    <string name="delete_journey">Xóa hành trình</string>
    <string name="distace_prompt">5KM</string>
    <string name="your_request">Yêu cầu của bạn</string>
    <string name="request_to_you">Yêu cầu đến bạn</string>
    <string name="time">03:12</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Bản đồ</item>
        <item>Hành trình</item>
        <item>Quản lý hành trình</item>
        <item>Taxi</item>
        <item>Danh sách hãng taxi</item>
        <item>Taxi yêu thích</item>
        <item>Lịch sử gọi taxi</item>
        <item>Khác</item>
        <item>Cài đặt</item>
        <item>Danh sách yêu cầu</item>
    </string-array>

    <!-- Distance to show driver -->
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_start_up">StartUp</string>
    <string name="note">Ghi chú</string>

</resources>