<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name_of_taxi_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name_of_taxi_driver_value"
        android:layout_alignTop="@id/name_of_taxi_driver_value"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/name_of_taxi_driver" />

    <EditText
        android:id="@id/name_of_taxi_driver_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/name_of_taxi_driver"
        android:hint="@string/password_hint" />

    <TextView
        android:id="@+id/phone_number_of_taxi_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/phone_number_of_taxi_driver_value"
        android:layout_alignTop="@id/phone_number_of_taxi_driver_value"
        android:layout_below="@+id/name_of_taxi_driver"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/phone_number_of_taxi_driver" />

    <EditText
        android:id="@id/phone_number_of_taxi_driver_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_of_taxi_driver_value"
        android:layout_toRightOf="@+id/phone_number_of_taxi_driver"
        android:hint="@string/password_hint"
        android:inputType="phone" />

    <TextView
        android:id="@+id/name_of_company_of_taxi_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name_of_company_of_taxi_driver_value"
        android:layout_alignTop="@id/name_of_company_of_taxi_driver_value"
        android:layout_below="@+id/name_of_taxi_driver_value"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/name_of_company_of_taxi_driver" />

    <EditText
        android:id="@id/name_of_company_of_taxi_driver_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_of_taxi_driver_value"
        android:layout_toRightOf="@+id/name_of_company_of_taxi_driver"
        android:hint="@string/password_hint"
        android:inputType="phone" />

    <TextView
        android:id="@+id/bank_account_of_taxi_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bank_account_of_taxi_driver_value"
        android:layout_alignTop="@id/bank_account_of_taxi_driver_value"
        android:layout_below="@+id/name_of_company_of_taxi_driver"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/bank_account_of_taxi_driver" />

    <EditText
        android:id="@id/bank_account_of_taxi_driver_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_of_company_of_taxi_driver_value"
        android:layout_toRightOf="@+id/bank_account_of_taxi_driver"
        android:hint="@string/password_hint"
        android:inputType="phone" />

    <TextView
        android:id="@+id/id_of_taxi_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/id_of_taxi_driver_value"
        android:layout_alignTop="@id/id_of_taxi_driver_value"
        android:layout_below="@+id/bank_account_of_taxi_driver"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/id_of_taxi_driver" />

    <EditText
        android:id="@id/id_of_taxi_driver_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bank_account_of_taxi_driver_value"
        android:layout_toRightOf="@+id/id_of_taxi_driver"
        android:hint="@string/password_hint"
        android:inputType="phone" />

</RelativeLayout>